# dag-flow

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  README.md  TODO.md  conftest.py  dagflow  dictwrapper  gindex  multikeydict  pyproject.toml  pytest.ini  requirements.txt  source.fish  storage
dagflow/: datadescriptor.py  edges.py  exception.py  flagsdescriptor.py  functionstack.py  graph.py  graphbase.py  graphviz.py  input.py  input_extra.py  input_handler.py  inputhandler.py  iter.py  iterators.py  labels.py  legs.py  lib.py  limbs.py  logger.py  make_fcn.py  makefcn.py  membernode.py  meta_node.py  metanode.py  node.py  node_base.py  node_deco.py  node_group.py  nodebase.py  nodes.py  output.py  parameters.py  plot.py  printl.py  shift.py  storage.py  tools.py  typefunctions.py  types.py  variable.py  (+1 more)
dagflow/bundles/: file_reader.py  load_array.py  load_arrays.py  load_graph.py  load_graph_data.py  load_graph_new.py  load_hist.py  load_parameters.py  load_record.py  load_variables.py  make_y_parameters_for_x.py
dagflow/core/: data_descriptor.py  edges.py  exception.py  flags_descriptor.py  graph.py  graph_base.py  graphviz.py  input.py  input_handler.py  input_strategy.py  iter.py  iterators.py  labels.py  make_fcn.py  meta_node.py  node.py  node_base.py  output.py  plot.py  shift.py  storage.py  type_functions.py
dagflow/dagflow/: graphviz.py  input.py  logger.py  shift.py
dagflow/example/: example.py
dagflow/export/: to_root.py
dagflow/lib/: Array.py  ArrayOnInput.py  ArraySum.py  BinCenter.py  BlockToOneNode.py  Cache.py  Cholesky.py  Concatenation.py  Copy.py  Cos.py  CovarianceMatrixGroup.py  CovmatrixFromCormatrix.py  Division.py  Dummy.py  ElSumSq.py  InSegment.py  Integrator.py  IntegratorGroup.py  IntegratorSampler.py  Interpolator.py  InterpolatorGroup.py  InverseSquareLaw.py  Jacobian.py  LinearFunction.py  LogProdDiag.py  ManyToOneNode.py  MatrixProductAB.py  (+33 more)
example/: example.py
gindex/: gindex.py
models/: dayabay_v0.py  dayabay_v1.py
reactornueosc/: EeToEnu.py  IBDXsecO1.py  IBDXsecO1Group.py  Jacobian_dEnu_dEe.py
src/: node.pxd
synthetic_graph/: graph-df.py  graph.py  readme.md  test.py
test/: test.py  test_basic.py  test_class.py  test_close_open.py  test_connection.py  test_containers.py  test_function_decorator.py  test_function_switch.py  test_graph.py  test_graph_big.py  test_hooks.py  test_input_handler.py  test_static_function_decorator.py
tests/: test_gindex.py  test_profiling.py
(+497 files in other folders)
